--- a/FlatEngine-Editor/imgui.ini
+++ b/FlatEngine-Editor/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Gameloop Control Panel]
 Pos=0,23
-Size=305,32
+Size=282,32
 Collapsed=0
 DockId=0x00000001,0
 
@@ -21,22 +21,22 @@ Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Inspector]
-Pos=1583,23
-Size=317,683
+Pos=1632,23
+Size=288,707
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Game View]
-Pos=1045,23
-Size=536,683
+Pos=284,23
+Size=1346,707
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][Scene View]
-Pos=307,23
-Size=736,683
+Pos=284,23
+Size=1346,707
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000015,1
 
 [Window][Logger]
 Pos=0,544
@@ -63,8 +63,8 @@ Collapsed=0
 DockId=0x00000013,0
 
 [Window][Animator]
-Pos=0,726
-Size=1800,274
+Pos=0,723
+Size=789,277
 Collapsed=0
 DockId=0x00000012,0
 
@@ -147,8 +147,8 @@ IsChild=1
 Size=780,480
 
 [Window][File Explorer]
-Pos=791,708
-Size=1109,292
+Pos=799,732
+Size=1121,277
 Collapsed=0
 DockId=0x00000011,0
 
@@ -284,8 +284,8 @@ Collapsed=0
 DockId=0x00000007,1
 
 [Window][Persistant GameObjects]
-Pos=0,488
-Size=305,218
+Pos=0,447
+Size=282,283
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -300,8 +300,8 @@ Size=525,408
 Collapsed=0
 
 [Window][Log]
-Pos=0,708
-Size=789,292
+Pos=0,732
+Size=797,277
 Collapsed=0
 DockId=0x00000012,0
 
@@ -317,7 +317,7 @@ Collapsed=0
 
 [Window][Scene GameObjects]
 Pos=0,57
-Size=305,429
+Size=282,388
 Collapsed=0
 DockId=0x00000002,0
 
@@ -336,20 +336,20 @@ Collapsed=0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,23
-Size=1900,977
+Size=1920,986
 Collapsed=0
 
 [Window][File Explorer/File Explorer_36A397C4/Directories Panel_88BE49FD]
 IsChild=1
-Size=251,269
+Size=251,254
 
 [Window][Animator/Animator_21D04237/Animated Properties_D2737111]
 IsChild=1
-Size=232,251
+Size=232,254
 
 [Window][Material Editor]
-Pos=0,708
-Size=789,292
+Pos=0,723
+Size=789,277
 Collapsed=0
 DockId=0x00000012,1
 
@@ -492,27 +492,25 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockNode              ID=0x00000007 Pos=375,142 Size=550,588 Selected=0xE87781F4
-DockSpace             ID=0x08BD597D Window=0x1BBC0F80 Pos=0,23 Size=1900,977 Split=Y
-  DockNode            ID=0x00000004 Parent=0x08BD597D SizeRef=1271,683 Split=X Selected=0x15E43931
-    DockNode          ID=0x0000000C Parent=0x00000004 SizeRef=1281,665 Split=X Selected=0x8065DB7E
-      DockNode        ID=0x00000014 Parent=0x0000000C SizeRef=1043,707 Split=X Selected=0x15E43931
-        DockNode      ID=0x00000006 Parent=0x00000014 SizeRef=305,692 Split=Y Selected=0x0D855956
-          DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=297,463 Split=Y Selected=0x9573C053
-            DockNode  ID=0x00000001 Parent=0x00000009 SizeRef=297,32 HiddenTabBar=1 Selected=0x99E906A0
-            DockNode  ID=0x00000002 Parent=0x00000009 SizeRef=297,429 Selected=0x9573C053
-          DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=297,218 Selected=0x0D855956
-        DockNode      ID=0x00000008 Parent=0x00000014 SizeRef=736,692 Selected=0x15E43931
-      DockNode        ID=0x00000015 Parent=0x0000000C SizeRef=556,707 CentralNode=1 Selected=0x8065DB7E
-    DockNode          ID=0x0000000E Parent=0x00000004 SizeRef=317,665 Selected=0x36DC96AB
-  DockNode            ID=0x00000005 Parent=0x08BD597D SizeRef=1271,292 Split=X Selected=0x9C2B5678
-    DockNode          ID=0x00000010 Parent=0x00000005 SizeRef=789,310 Split=X Selected=0x2E826689
-      DockNode        ID=0x00000012 Parent=0x00000010 SizeRef=616,310 Selected=0x139FDA3F
-      DockNode        ID=0x00000013 Parent=0x00000010 SizeRef=220,310 Selected=0x0E5D6D7A
-    DockNode          ID=0x00000011 Parent=0x00000005 SizeRef=1109,310 Selected=0x9C2B5678
-DockSpace             ID=0x8B93E3BD Pos=0,23 Size=1920,1017 Split=X Selected=0x642CEEBB
-  DockNode            ID=0x0000000A Parent=0x8B93E3BD SizeRef=314,691 HiddenTabBar=1 Selected=0x29EABFBD
-  DockNode            ID=0x0000000D Parent=0x8B93E3BD SizeRef=1605,691 Split=Y Selected=0x08AA43A5
-    DockNode          ID=0x0000000F Parent=0x0000000D SizeRef=1308,403 CentralNode=1 Selected=0x642CEEBB
-    DockNode          ID=0x00000003 Parent=0x0000000D SizeRef=1308,205 Selected=0x8E5F85DE
+DockNode            ID=0x00000007 Pos=375,142 Size=550,588 Selected=0xE87781F4
+DockSpace           ID=0x08BD597D Window=0x1BBC0F80 Pos=0,23 Size=1920,986 Split=Y
+  DockNode          ID=0x00000004 Parent=0x08BD597D SizeRef=1271,698 Split=X Selected=0x15E43931
+    DockNode        ID=0x0000000C Parent=0x00000004 SizeRef=1610,665 Split=X Selected=0x8065DB7E
+      DockNode      ID=0x00000014 Parent=0x0000000C SizeRef=282,707 Split=Y Selected=0x15E43931
+        DockNode    ID=0x00000009 Parent=0x00000014 SizeRef=297,417 Split=Y Selected=0x9573C053
+          DockNode  ID=0x00000001 Parent=0x00000009 SizeRef=297,32 HiddenTabBar=1 Selected=0x99E906A0
+          DockNode  ID=0x00000002 Parent=0x00000009 SizeRef=297,383 Selected=0x9573C053
+        DockNode    ID=0x0000000B Parent=0x00000014 SizeRef=297,279 Selected=0x0D855956
+      DockNode      ID=0x00000015 Parent=0x0000000C SizeRef=1326,707 CentralNode=1 Selected=0x15E43931
+    DockNode        ID=0x0000000E Parent=0x00000004 SizeRef=288,665 Selected=0x36DC96AB
+  DockNode          ID=0x00000005 Parent=0x08BD597D SizeRef=1271,277 Split=X Selected=0x9C2B5678
+    DockNode        ID=0x00000010 Parent=0x00000005 SizeRef=789,310 Split=X Selected=0x2E826689
+      DockNode      ID=0x00000012 Parent=0x00000010 SizeRef=616,310 Selected=0x139FDA3F
+      DockNode      ID=0x00000013 Parent=0x00000010 SizeRef=220,310 Selected=0x0E5D6D7A
+    DockNode        ID=0x00000011 Parent=0x00000005 SizeRef=1109,310 Selected=0x9C2B5678
+DockSpace           ID=0x8B93E3BD Pos=0,23 Size=1920,1017 Split=X Selected=0x642CEEBB
+  DockNode          ID=0x0000000A Parent=0x8B93E3BD SizeRef=314,691 HiddenTabBar=1 Selected=0x29EABFBD
+  DockNode          ID=0x0000000D Parent=0x8B93E3BD SizeRef=1605,691 Split=Y Selected=0x08AA43A5
+    DockNode        ID=0x0000000F Parent=0x0000000D SizeRef=1308,403 CentralNode=1 Selected=0x642CEEBB
+    DockNode        ID=0x00000003 Parent=0x0000000D SizeRef=1308,205 Selected=0x8E5F85DE
 
